--- a/preamble.tex
+++ b/preamble.tex
@@ -164,6 +164,9 @@
 \newcommand*{\wi¬extrinsics}{\mathbf{x}}
 \newcommand*{\wi¬exportsegments}{e}
 
+\newcommand*{\accumulated}{\xi}
+\newcommand*{\ready}{\vartheta}
+
 \newcommand*{\jamdraftversion}{\input{VERSION}\!\!\!}
 \newcommand*{\jamdraftversionstring}{\jamdraftversion}
 
