--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -36,29 +36,51 @@ We define $\delta^\dagger$ as the state after the integration of the preimages:
 
 Accumulation of a work-package/work-report may be deferred in the case that it has a not-yet-fulfilled dependency or cancelled entirely in the case of an invalid dependency. Dependencies are specified as work-package hashes, and an epochal history of all such accumulated work-package hashes is maintained along with the segment roots. This is the state item $\accumulated$. Formally:
 \begin{equation}
-  \accumulated \in \seq{\dict{\H}{\H}}_\mathsf{E}
+  \accumulated \in \seq{\dict{\H}{\H}}_\mathsf{S}\\
 \end{equation}
 
-We also retain a queue of work-reports which are \emph{per se} ready to be accumulated but which have or had unfulfilled dependencies as $\ready$. Formally:
-\begin{equation}
-  \ready \in \seq{\seq{(\mathbb{W}, \{\H\})}}_\mathsf{S}
-\end{equation}
-
-At the first block of each new epoch, the dictionary is cycled, discarding any old entries with dependencies. We cannot yet define the posterior state $\ready'_0$, but do define the intermediate state from which it is derived, $\ready^\dagger_0$. Formally:
+We also maintain knowledge of not-yet-accumulated work-reports in the state item $\ready$. Each of these became available at most $\mathsf{S}$ blocks ago but have or had unfulfilled dependencies. Formally:
 \begin{align}
-  \using e =\; &\ffrac{\tau}{\mathsf{E}} \ ,\quad e' = \ffrac{\tau'}{\mathsf{E}}\\
-  (\ready^\dagger_0, \ready'_1) \equiv\;&\begin{cases}
-      (\ready_0, \ready_1) &\when e' = e \\
-      (\{\}, \ready_0 \cup \mathbf{k}) &\otherwise
-  \end{cases}\\
-  \where \mathbf{k} &= \{(w, \{\}) \mid (w, \{\}) \in \ready_1\}
+  \ready &\in \seq{\seq{(\mathbb{W}, \{\H\})}}_\mathsf{S}\\
+  \mathsf{S} &\equiv 1000
 \end{align}
 
-The newly available work-reports, $\mathbf{W}$ are partitioned into a sequence of zero-prerequisite work-reports for priority accumulation $\mathbf{W}^!$ and a sequence of work-reports with prerequisites $\mathbf{W}_1$. Formally:, 
+The newly available work-reports, $\mathbf{W}$ are partitioned into a sequence of zero-prerequisite work-reports for immediate accumulation $\mathbf{W}^!$. Those not in said sequence are for queued execution $\mathbf{W}^Q$. Formally:
+\begin{align}
+  \mathbf{W}^! &\equiv [ w \mid w \orderedin \mathbf{W}, (w_x)_p = \none ] \\
+  \mathbf{W}^Q &\equiv [ w \mid w \orderedin \mathbf{W}, (w_x)_p \ne \none ] \\
+  \ready'_{\mathsf{S} - 1} &= R(\mathbf{W}^Q, \mathbf{D}) \\
+  \accumulated'_{\mathsf{S} - 1} &= \{ TODO \} \\
+  \forall i &\in \N_\mathsf{S - 1}: (\ready'_{i}, \accumulated'_{i}) \equiv (R(\ready_{i + 1}, \mathbf{D}), \accumulated_{i + 1})
+\end{align}
 
-We then define the accumulation priority queue.  is a sequence of work-packages, ordered by the epoch of their earliest work-report. Formally:
+TODO: Remove (and check segments-root of) dependencies already in $\accumulated$ at the time of becoming newly available.
 
+TODO: Check segments-root of dependencies when dependencies are fulfilled.
 
+We then define the accumulation priority queue function $Q$ together with the queue-removal function $R$. The former may be given our two state items and will provide the sequence of work-reports which are accumulatable, on the provision that all work-reports in the sequence prior are themselves accumulated:
+\begin{align}
+  &Q\colon\left\{\begin{aligned}
+    &(\seq{(\mathbb{W}, \{\H\})}, \dict{\H}{\H}) \to \seq{\mathbb{W}} \\
+    &(\mathbf{r}, \mathbf{a}) \mapsto \begin{cases}
+      [] &\when w = \none \\
+      \mathbf{g} \frown Q(R(\mathbf{r}, \mathbf{g}), \mathbf{a} \cup m)\!\!\!\! &\otherwise
+    \end{cases}\!\!\!\!
+  \end{aligned}\right.\\
+  \nonumber &\where m = \{((w_s)_h \mapsto (w_s)_e) \mid w \in \mathbf{g}\}\\
+  \nonumber &\also \mathbf{g} = [w \mid (w, \{\}) \orderedin \mathbf{r}]\\
+  &R\colon\left\{\begin{aligned}
+    &(\seq{(\mathbb{W}, \{\H\})}, \{\mathbb{W}\}) \to \seq{(\mathbb{W}, \{\H\})} \\
+    &(\mathbf{r}, \mathbf{x}) \mapsto [(w, \mathbf{d} \setminus \mathbf{x}) \mid (w, \mathbf{d}) \orderedin \mathbf{r}, w \not\in \mathbf{x}]
+  \end{aligned}\right.
+\end{align}
+
+We may now define the sequence of accumulatable work-reports in this block as $\mathbf{W}^*$:
+\begin{equation}
+  \mathbf{W}^* \equiv \mathbf{W}^! \frown Q(\ready)
+\end{equation}
+
+We work with a limited amount of gas per block and therefore may not be able to process all items in $\mathbf{W}^*$ in a single block. We process as many as possible while staying within our gas limit and mark the work-reports that are accumulated as $\mathbf{D}$.
 
 
 
