--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -512,7 +512,7 @@ This defines a number of functions broadly of the form $(\xi' \in \Z_G, \omega' 
   \end{aligned}$\\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
-  $\Omega_X(\xi, \omega, \mu, (\mathbf{x}, \mathbf{y}), s)$ \\
+  $\Omega_Q(\xi, \omega, \mu, (\mathbf{x}, \mathbf{y}), s)$ \\
   \texttt{quit} = 12 \\
   $g = 10 + \omega_1 + 2^{32}\cdot\omega_2 $} &
   $\begin{aligned}
