Fix some \in --> \orderedin

--- a/text/auditing.tex
+++ b/text/auditing.tex
@@ -48,7 +48,7 @@ We define our initial audit tranche in terms of a verifiable random quantity $s_
 We may then define $\mathbf{a}_0$ as the non-empty items to audit through a verifiably random selection of ten cores:
 \begin{align}
   \mathbf{a}_0 &= \{\tup{c, w} \mid \tup{c, w} \in \mathbf{p}_{\dots+10}, w \ne \none\} \\
-  \where \mathbf{p} &= \mathcal{F}([\tup{c, \mathbf{Q}_c} \mid c \in \N_\mathsf{C}], r) \\
+  \where \mathbf{p} &= \mathcal{F}([\tup{c, \mathbf{Q}_c} \mid c \orderedin \N_\mathsf{C}], r) \\
   \also r &= \banderout{s_0}
 \end{align}
 
