--- a/text/utilities.tex
+++ b/text/utilities.tex
@@ -15,7 +15,7 @@ Since it is often useful to shuffle a sequence based on some random seed in the 
 \begin{align}
   \forall l \in \N:\ \mathcal{Q}_l&\colon\left\{\begin{aligned}
     \H &\to \seq{\N_l}\\
-    h &\mapsto [\de_4(\mathcal{H}(h \frown \se_4(\lfloor \nicefrac{i}{8}\rfloor))_{4i \bmod 32 \dots+4}) \mid i \in \N_l]
+    h &\mapsto [\de_4(\mathcal{H}(h \frown \se_4(\lfloor \nicefrac{i}{8}\rfloor))_{4i \bmod 32 \dots+4}) \mid i \orderedin \N_l]
   \end{aligned}\right.\\
   \label{eq:sequencefromhash}
   \forall T, l \in \N:\ \mathcal{F}&\colon\left\{\begin{aligned}
