fix k -> h in lookup function

--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -269,7 +269,7 @@ The $\mathtt{gas}$ function, $\Omega_G$ has a parameter list suffixed with an el
       \begin{rcases}
         \mathtt{NONE} & \when \mathbf{v} = \none \\
         |\mathbf{v}| &\otherwise \\
-      \end{rcases} &\when k \ne \error \wedge \mathbb{Z}_{b_o \dots+ b_z} \subset \mathbb{V}^*_{\mu} \\
+      \end{rcases} &\when h \ne \error \wedge \mathbb{Z}_{b_o \dots+ b_z} \subset \mathbb{V}^*_{\mu} \\
       \mathtt{OOB} &\otherwise
     \end{cases}
   \end{aligned}$\\
